--- a/lib/linguist/languages.yml
+++ b/lib/linguist/languages.yml
@@ -3501,6 +3501,19 @@ RMarkdown:
   - ".rmd"
   tm_scope: source.gfm
   language_id: 313
+RPC:
+  type: programming
+  aliases:
+  - rpcgen
+  - oncrpc
+  - xdr
+  ace_mode: c_cpp
+  extensions:
+  - ".x"
+  interpreters:
+  - rpcgen
+  tm_scope: none
+  language_id: 1031374237
 RPM Spec:
   type: data
   tm_scope: source.rpm-spec
